# pyproject.toml
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llm_agent_framework_tools"
version = "0.1.0"
authors = [
  { name="Uday Valera", email="udayvalera@gmail.com" },
]
description = "Scaffolding tools for the LLM Agent Framework."
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
create-simple-agent = "scaffold:main"
